# Quira

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_chatbot.py  mkdocs.yml  pyproject.toml  vercel.json
.github/workflows/: deploy.yml  publish.yml  test.yml
benchmarks/: run_benchmark.py  run_benchmarks.py
docs/: package-lock.json  package.json
docs/public/: robots.txt  sitemap.xml
docs/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
docs/src/app/docs/: layout.tsx  page.tsx
docs/src/components/: AnimatedSection.tsx  CopyButton.tsx  ScrollSpySidebar.tsx
examples/fastapi_demo/: client.html  server.py
quira/: __init__.py  exceptions.py
quira/core/: pipeline.py  retry.py  session.py
quira/integrations/: __init__.py  langchain.py  llama_index.py
quira/modules/: differential.py  ingestion.py  speculative.py  tetris.py
quira/providers/: __init__.py  base.py  fallback.py
quira/providers/cache/: __init__.py  disk.py  memcached.py  memory.py  redis.py
quira/providers/llm/: __init__.py  anthropic.py  gemini.py  groq_provider.py  litellm_provider.py  ollama.py  openai.py
quira/providers/vector/: __init__.py  chroma.py  milvus.py  pinecone.py  qdrant.py  supabase_store.py  weaviate.py
tests/: test_differential.py  test_fallbacks.py  test_modules.py  test_overrides.py  test_pipeline.py  test_pipeline_init.py  test_providers.py  test_quira.py  test_session.py  test_tetris.py
